--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
       <li><div><img src="graphics/emojis/flushed.png">:<span class="name" data-alternative-name="flustered, embarassed, face, blush, shy, flattered">flushed</span>:</div></li>
       <li><div><img src="graphics/emojis/relieved.png">:<span class="name" data-alternative-name="face, relaxed, phew, massage, happiness">relieved</span>:</div></li>
       <li><div><img src="graphics/emojis/satisfied.png">:<span class="name" data-alternative-name="contented","pleased">satisfied</span>:</div></li>
-      <li><div><img src="graphics/emojis/grin.png">:<span class="name" data-alternative-name="happy, smile, face, joy">grin</span>:</div></li>
+      <li><div><img src="graphics/emojis/grin.png">:<span class="name" data-alternative-name="happy, smile, face, joy, awkward">grin</span>:</div></li>
       <li><div><img src="graphics/emojis/wink.png">:<span class="name" data-alternative-name="flirt, face, happy, mischievous, secret">wink</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_winking_eye.png">:<span class="name" data-alternative-name="face, prank, childish, playful, mischievous, smile">stuck_out_tongue_winking_eye</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_closed_eyes.png">:<span class="name" data-alternative-name="face, prank, playful, mischievous, smile">stuck_out_tongue_closed_eyes</span>:</div></li>
@@ -145,13 +145,13 @@
       <li><div><img src="graphics/emojis/sleeping.png">:<span class="name" data-alternative-name="asleep, face, tired, sleepy, night, zzz">sleeping</span>:</div></li>
       <li><div><img src="graphics/emojis/worried.png">:<span class="name" data-alternative-name="frustrated, scared, face, concern, nervous">worried</span>:</div></li>
       <li><div><img src="graphics/emojis/frowning.png">:<span class="name" data-alternative-name="face, aw, what">frowning</span>:</div></li>
-      <li><div><img src="graphics/emojis/anguished.png">:<span class="name" data-alternative-name="face, stunned, nervous">anguished</span>:</div></li>
+      <li><div><img src="graphics/emojis/anguished.png">:<span class="name" data-alternative-name="face, stunned, nervous, shocked">anguished</span>:</div></li>
       <li><div><img src="graphics/emojis/open_mouth.png">:<span class="name" data-alternative-name="face, surprise, impressed, wow">open_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/grimacing.png">:<span class="name" data-alternative-name="face, grimace, teeth">grimacing</span>:</div></li>
       <li><div><img src="graphics/emojis/confused.png">:<span class="name" data-alternative-name="baffled, puzzled, face, indifference, huh, weird, hmmm">confused</span>:</div></li>
       <li><div><img src="graphics/emojis/hushed.png">:<span class="name" data-alternative-name="face, woo, shh,conceal,hide">hushed</span>:</div></li>
       <li><div><img src="graphics/emojis/expressionless.png">:<span class="name" data-alternative-name="deadpan, face, indifferent, -_-, meh">expressionless</span>:</div></li>
-      <li><div><img src="graphics/emojis/unamused.png">:<span class="name" data-alternative-name="sarcasm, indifference, bored, straight face, serious">unamused</span>:</div></li>
+      <li><div><img src="graphics/emojis/unamused.png">:<span class="name" data-alternative-name="sarcasm, indifference, bored, straight face, serious, not-funny">unamused</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_smile.png">:<span class="name" data-alternative-name="happy, relief, face, hot, laugh">sweat_smile</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat.png">:<span class="name" data-alternative-name="worried, stressed, face, hot, sad, tired, exercise">sweat</span>:</div></li>
       <li><div><img src="graphics/emojis/disappointed_relieved.png">:<span class="name" data-alternative-name="face, phew, sweat, nervous">disappointed_relieved</span>:</div></li>
@@ -177,9 +177,9 @@
       <li><div><img src="graphics/emojis/mask.png">:<span class="name" data-alternative-name="face, sick, ill, disease">mask</span>:</div></li>
       <li><div><img src="graphics/emojis/sunglasses.png">:<span class="name" data-alternative-name="shades, face, cool, smile, summer, beach">sunglasses</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy_face.png">:<span class="name" data-alternative-name="ko, spent, unconscious, xox">dizzy_face</span>:</div></li>
-      <li><div><img src="graphics/emojis/imp.png">:<span class="name" data-alternative-name="devil, angry, horns">imp</span>:</div></li>
-      <li><div><img src="graphics/emojis/smiling_imp.png">:<span class="name" data-alternative-name="devil, horns">smiling_imp</span>:</div></li>
-      <li><div><img src="graphics/emojis/neutral_face.png">:<span class="name" data-alternative-name="indifference, meh">neutral_face</span>:</div></li>
+      <li><div><img src="graphics/emojis/imp.png">:<span class="name" data-alternative-name="devil, angry, horns, satan">imp</span>:</div></li>
+      <li><div><img src="graphics/emojis/smiling_imp.png">:<span class="name" data-alternative-name="devil, horns, satan">smiling_imp</span>:</div></li>
+      <li><div><img src="graphics/emojis/neutral_face.png">:<span class="name" data-alternative-name="indifference, meh, dont_care">neutral_face</span>:</div></li>
       <li><div><img src="graphics/emojis/no_mouth.png">:<span class="name" data-alternative-name="face, hellokitty,silent">no_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/innocent.png">:<span class="name" data-alternative-name="angel, face, heaven, halo">innocent</span>:</div></li>
       <li><div><img src="graphics/emojis/alien.png">:<span class="name" data-alternative-name="extraterrestrial, UFO, paul, weird, outer_space">alien</span>:</div></li>
@@ -201,7 +201,7 @@
       <li><div><img src="graphics/emojis/dizzy.png">:<span class="name" data-alternative-name="star, sparkle, shoot, magic">dizzy</span>:</div></li>
       <li><div><img src="graphics/emojis/boom.png">:<span class="name" data-alternative-name="explosion, bomb, explode, collision, blown">boom</span>:</div></li>
       <li><div><img src="graphics/emojis/collision.png">:<span class="name" data-alternative-name="accident,fight,boom">collision</span>:</div></li>
-      <li><div><img src="graphics/emojis/anger.png">:<span class="name" data-alternative-name="angry, mad">anger</span>:</div></li>
+      <li><div><img src="graphics/emojis/anger.png">:<span class="name" data-alternative-name="angry, mad, frustrated">anger</span>:</div></li>
       <li><div><img src="graphics/emojis/exclamation.png">:<span class="name" data-alternative-name="heavy_exclamation_mark, danger, surprise, punctuation, wow, warning">exclamation</span>:</div></li>
       <li><div><img src="graphics/emojis/question.png">:<span class="name" data-alternative-name="doubt, confused">question</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_exclamation.png">:<span class="name" data-alternative-name="surprise, punctuation, gray, wow, warning">grey_exclamation</span>:</div></li>
