Added new alternative name to no mouth emoji

--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
       <li><div><img src="graphics/emojis/imp.png">:<span class="name" data-alternative-name="devil, angry, horns">imp</span>:</div></li>
       <li><div><img src="graphics/emojis/smiling_imp.png">:<span class="name" data-alternative-name="devil, horns">smiling_imp</span>:</div></li>
       <li><div><img src="graphics/emojis/neutral_face.png">:<span class="name" data-alternative-name="indifference, meh">neutral_face</span>:</div></li>
-      <li><div><img src="graphics/emojis/no_mouth.png">:<span class="name" data-alternative-name="face, hellokitty,silent">no_mouth</span>:</div></li>
+      <li><div><img src="graphics/emojis/no_mouth.png">:<span class="name" data-alternative-name="face, hellokitty,silent,quiet">no_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/innocent.png">:<span class="name" data-alternative-name="angel, face, heaven, halo">innocent</span>:</div></li>
       <li><div><img src="graphics/emojis/alien.png">:<span class="name" data-alternative-name="extraterrestrial, UFO, paul, weird, outer_space">alien</span>:</div></li>
       <li><div><img src="graphics/emojis/yellow_heart.png">:<span class="name" data-alternative-name="heart, love, like, affection, valentines">yellow_heart</span>:</div></li>
