Add links to clubhouse.io

--- a/public/index.html
+++ b/public/index.html
@@ -97,8 +97,9 @@
       <a href="http://datenstrom.se/yellow/">Yellow</a>,
       <a href="https://youtube.com">YouTube</a>,
       <a href="https://habitica.com">Habitica</a>,
-      <a href="http://www.mattermost.org/">Mattermost</a>
-      and <a href="http://kanbantool.com/">Kanban Tool</a>
+      <a href="http://www.mattermost.org/">Mattermost</a>,
+      <a href="http://kanbantool.com/">Kanban Tool</a>
+      and <a href="https://clubhouse.io">Clubhouse</a>.
     </p>
 
     <p>
