--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
       <a href="https://idobata.io/">Idobata</a>,
       <a href="https://nodebb.org/">NodeBB Forums</a>,
       <a href="https://slack.com/">Slack</a>,
+      <a href="https://zulip.org/">Zulip</a>,
       <a href="https://streamup.com/">Streamup</a>,
       <a href="http://organisedminds.com/">OrganisedMinds</a>,
       <a href="https://hackpad.com/">Hackpad</a>,
