--- a/public/index.html
+++ b/public/index.html
@@ -397,13 +397,13 @@
       <li><div><img src="graphics/emojis/hibiscus.png">:<span class="name" data-alternative-name="floral, plant, vegetable, flowers, beach">hibiscus</span>:</div></li>
       <li><div><img src="graphics/emojis/maple_leaf.png">:<span class="name" data-alternative-name="nature, plant, vegetable, canada, fall">maple_leaf</span>:</div></li>
       <li><div><img src="graphics/emojis/leaves.png">:<span class="name" data-alternative-name="nature, plant, tree, vegetable, grass, lawn, spring">leaves</span>:</div></li>
-      <li><div><img src="graphics/emojis/fallen_leaf.png">:<span class="name" data-alternative-name="nature, plant, vegetable, leaves">fallen_leaf</span>:</div></li>
+      <li><div><img src="graphics/emojis/fallen_leaf.png">:<span class="name" data-alternative-name="nature, plant, vegetable, leaves, forest">fallen_leaf</span>:</div></li>
       <li><div><img src="graphics/emojis/herb.png">:<span class="name" data-alternative-name="vegetable, plant, medicine, weed, grass, lawn">herb</span>:</div></li>
       <li><div><img src="graphics/emojis/mushroom.png">:<span class="name" data-alternative-name="plant, vegetable">mushroom</span>:</div></li>
       <li><div><img src="graphics/emojis/cactus.png">:<span class="name" data-alternative-name="vegetable, plant, nature">cactus</span>:</div></li>
       <li><div><img src="graphics/emojis/palm_tree.png">:<span class="name" data-alternative-name="plant, vegetable, nature, summer, beach">palm_tree</span>:</div></li>
-      <li><div><img src="graphics/emojis/evergreen_tree.png">:<span class="name" data-alternative-name="plant, nature">evergreen_tree</span>:</div></li>
-      <li><div><img src="graphics/emojis/deciduous_tree.png">:<span class="name" data-alternative-name="plant, nature">deciduous_tree</span>:</div></li>
+      <li><div><img src="graphics/emojis/evergreen_tree.png">:<span class="name" data-alternative-name="plant, nature, forest">evergreen_tree</span>:</div></li>
+      <li><div><img src="graphics/emojis/deciduous_tree.png">:<span class="name" data-alternative-name="plant, nature, forest">deciduous_tree</span>:</div></li>
       <li><div><img src="graphics/emojis/chestnut.png">:<span class="name" data-alternative-name="food, squirrel">chestnut</span>:</div></li>
       <li><div><img src="graphics/emojis/seedling.png">:<span class="name" data-alternative-name="plant, nature, grass, lawn, spring">seedling</span>:</div></li>
       <li><div><img src="graphics/emojis/blossom.png">:<span class="name" data-alternative-name="nature, flowers, yellow">blossom</span>:</div></li>
