Added data-alternative-names to several emojis

--- a/public/index.html
+++ b/public/index.html
@@ -209,8 +209,8 @@
       <li><div><img src="graphics/emojis/zzz.png">:<span class="name" data-alternative-name="sleep, bored, sleepy, tired">zzz</span>:</div></li>
       <li><div><img src="graphics/emojis/dash.png">:<span class="name" data-alternative-name="wind, air, fast, shoo, fart, smoke, puff">dash</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_drops.png">:<span class="name" data-alternative-name="water, drip, oops">sweat_drops</span>:</div></li>
-      <li><div><img src="graphics/emojis/notes.png">:<span class="name data-alternative-name=" music""="" data-alternative-name="music, score">notes</span>:</div></li>
-      <li><div><img src="graphics/emojis/musical_note.png">:<span class="name" data-alternative-name="music, score, tone, sound">musical_note</span>:</div></li>
+      <li><div><img src="graphics/emojis/notes.png">:<span class="name data-alternative-name=" music""="" data-alternative-name="song, audio, music, score">notes</span>:</div></li>
+      <li><div><img src="graphics/emojis/musical_note.png">:<span class="name" data-alternative-name="song, audio, music, score, tone, sound">musical_note</span>:</div></li>
       <li><div><img src="graphics/emojis/fire.png">:<span class="name" data-alternative-name="hot, cook, flame">fire</span>:</div></li>
       <li><div><img src="graphics/emojis/hankey.png">:<span class="name" data-alternative-name="poop, shitface, fail, turd">hankey</span>:</div></li>
       <li><div><img src="graphics/emojis/poop.png">:<span class="name" data-alternative-name="shit, turd">poop</span>:</div></li>
@@ -905,7 +905,7 @@
       <li><div><img src="graphics/emojis/no_bicycles.png">:<span class="name" data-alternative-name="cyclist, prohibited, circle">no_bicycles</span>:</div></li>
       <li><div><img src="graphics/emojis/no_pedestrians.png">:<span class="name" data-alternative-name="rules, crossing, walking, circle">no_pedestrians</span>:</div></li>
       <li><div><img src="graphics/emojis/children_crossing.png">:<span class="name" data-alternative-name="school, warning, danger, sign, driving, yellow-diamond">children_crossing</span>:</div></li>
-      <li><div><img src="graphics/emojis/no_entry.png">:<span class="name" data-alternative-name="limit, security, privacy, bad, denied, stop, circle">no_entry</span>:</div></li>
+      <li><div><img src="graphics/emojis/no_entry.png">:<span class="name" data-alternative-name="collapse, limit, security, privacy, bad, denied, stop, circle">no_entry</span>:</div></li>
       <li><div><img src="graphics/emojis/eight_spoked_asterisk.png">:<span class="name" data-alternative-name="star, sparkle, green-square">eight_spoked_asterisk</span>:</div></li>
       <li><div><img src="graphics/emojis/sparkle.png">:<span class="name" data-alternative-name="stars, green-square, awesome, good, fireworks">sparkle</span>:</div></li>
       <li><div><img src="graphics/emojis/eight_pointed_black_star.png">:<span class="name" data-alternative-name="orange-square, shape, polygon">eight_pointed_black_star</span>:</div></li>
@@ -964,22 +964,22 @@
       <li><div><img src="graphics/emojis/clock830.png">:<span class="name" data-alternative-name="time, late, early, schedule">clock830</span>:</div></li>
       <li><div><img src="graphics/emojis/clock9.png">:<span class="name" data-alternative-name="time, late, early, schedule">clock9</span>:</div></li>
       <li><div><img src="graphics/emojis/clock930.png">:<span class="name" data-alternative-name="time, late, early, schedule">clock930</span>:</div></li>
-      <li><div><img src="graphics/emojis/heavy_dollar_sign.png">:<span class="name" data-alternative-name="money, sales, payment, currency">heavy_dollar_sign</span>:</div></li>
+      <li><div><img src="graphics/emojis/heavy_dollar_sign.png">:<span class="name" data-alternative-name="cash, money, sales, payment, currency">heavy_dollar_sign</span>:</div></li>
       <li><div><img src="graphics/emojis/copyright.png">:<span class="name" data-alternative-name="ip, license, circle, law, legal">copyright</span>:</div></li>
       <li><div><img src="graphics/emojis/registered.png">:<span class="name" data-alternative-name="alphabet, circle">registered</span>:</div></li>
       <li><div><img src="graphics/emojis/tm.png">:<span class="name" data-alternative-name="trademark, brand, law, legal">tm</span>:</div></li>
-      <li><div><img src="graphics/emojis/x.png">:<span class="name" data-alternative-name="no, delete, remove">x</span>:</div></li>
+      <li><div><img src="graphics/emojis/x.png">:<span class="name" data-alternative-name="cross, wrong, no, delete, remove">x</span>:</div></li>
       <li><div><img src="graphics/emojis/heavy_exclamation_mark.png">:<span class="name" data-alternative-name="shocked, surprised">heavy_exclamation_mark</span>:</div></li>
       <li><div><img src="graphics/emojis/bangbang.png">:<span class="name" data-alternative-name="exclamation, surprise">bangbang</span>:</div></li>
       <li><div><img src="graphics/emojis/interrobang.png">:<span class="name" data-alternative-name="wat, punctuation, surprise">interrobang</span>:</div></li>
-      <li><div><img src="graphics/emojis/o.png">:<span class="name" data-alternative-name="circle, round">o</span>:</div></li>
+      <li><div><img src="graphics/emojis/o.png">:<span class="name" data-alternative-name="zero, circle, round">o</span>:</div></li>
       <li><div><img src="graphics/emojis/heavy_multiplication_x.png">:<span class="name" data-alternative-name="math, calculation">heavy_multiplication_x</span>:</div></li>
-      <li><div><img src="graphics/emojis/heavy_plus_sign.png">:<span class="name" data-alternative-name="math, calculation, addition, more, increase">heavy_plus_sign</span>:</div></li>
-      <li><div><img src="graphics/emojis/heavy_minus_sign.png">:<span class="name" data-alternative-name="math, calculation, subtract, less">heavy_minus_sign</span>:</div></li>
+      <li><div><img src="graphics/emojis/heavy_plus_sign.png">:<span class="name" data-alternative-name="plus, add, math, calculation, addition, more, increase">heavy_plus_sign</span>:</div></li>
+      <li><div><img src="graphics/emojis/heavy_minus_sign.png">:<span class="name" data-alternative-name="dash, math, calculation, subtract, less">heavy_minus_sign</span>:</div></li>
       <li><div><img src="graphics/emojis/heavy_division_sign.png">:<span class="name" data-alternative-name="divide, math, calculation">heavy_division_sign</span>:</div></li>
       <li><div><img src="graphics/emojis/white_flower.png">:<span class="name" data-alternative-name="floral, japanese, spring">white_flower</span>:</div></li>
       <li><div><img src="graphics/emojis/100.png">:<span class="name" data-alternative-name="score, perfect, numbers, century, exam, quiz, test, pass, hundred">100</span>:</div></li>
-      <li><div><img src="graphics/emojis/heavy_check_mark.png">:<span class="name" data-alternative-name="ok, nike">heavy_check_mark</span>:</div></li>
+      <li><div><img src="graphics/emojis/heavy_check_mark.png">:<span class="name" data-alternative-name="ok, nike, tick, yes, correct">heavy_check_mark</span>:</div></li>
       <li><div><img src="graphics/emojis/ballot_box_with_check.png">:<span class="name" data-alternative-name="ok, agree, confirm, black-square, vote, election">ballot_box_with_check</span>:</div></li>
       <li><div><img src="graphics/emojis/radio_button.png">:<span class="name" data-alternative-name="input, old, music, circle">radio_button</span>:</div></li>
       <li><div><img src="graphics/emojis/link.png">:<span class="name" data-alternative-name="rings, url">link</span>:</div></li>
@@ -995,12 +995,12 @@
       <li><div><img src="graphics/emojis/white_medium_square.png">:<span class="name" data-alternative-name="shape, stone, icon">white_medium_square</span>:</div></li>
       <li><div><img src="graphics/emojis/black_square.png">:<span class="name" data-alternative-name="shape, icon, button">black_large_square</span>:</div></li>
       <li><div><img src="graphics/emojis/white_large_square.png">:<span class="name" data-alternative-name="shape, icon, stone, button">white_large_square</span>:</div></li>
-      <li><div><img src="graphics/emojis/white_check_mark.png">:<span class="name" data-alternative-name="green-square, ok, agree, vote, election">white_check_mark</span>:</div></li>
+      <li><div><img src="graphics/emojis/white_check_mark.png">:<span class="name" data-alternative-name="correct, green-square, ok, agree, vote, election, tick">white_check_mark</span>:</div></li>
       <li><div><img src="graphics/emojis/black_square_button.png">:<span class="name" data-alternative-name="shape, input, frame">black_square_button</span>:</div></li>
       <li><div><img src="graphics/emojis/white_square_button.png">:<span class="name" data-alternative-name="shape, input">white_square_button</span>:</div></li>
       <li><div><img src="graphics/emojis/black_circle.png">:<span class="name" data-alternative-name="shape, button, round">black_circle</span>:</div></li>
       <li><div><img src="graphics/emojis/white_circle.png">:<span class="name" data-alternative-name="shape, round">white_circle</span>:</div></li>
-      <li><div><img src="graphics/emojis/red_circle.png">:<span class="name" data-alternative-name="shape, error, danger">red_circle</span>:</div></li>
+      <li><div><img src="graphics/emojis/red_circle.png">:<span class="name" data-alternative-name="shape, error, danger, round">red_circle</span>:</div></li>
       <li><div><img src="graphics/emojis/large_blue_circle.png">:<span class="name" data-alternative-name="shape, icon, button">large_blue_circle</span>:</div></li>
       <li><div><img src="graphics/emojis/large_blue_diamond.png">:<span class="name" data-alternative-name="shape, jewel, gem">large_blue_diamond</span>:</div></li>
       <li><div><img src="graphics/emojis/large_orange_diamond.png">:<span class="name" data-alternative-name="shape, jewel, gem">large_orange_diamond</span>:</div></li>
