--- a/public/index.html
+++ b/public/index.html
@@ -311,8 +311,8 @@
     <ul class="nature emojis" id="emoji-nature">
       <li><div><img src="graphics/emojis/sunny.png"> :<span class="name" data-alternative-name="weather">sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/umbrella.png"> :<span class="name" data-alternative-name="water, rain">umbrella</span>:</div></li>
-      <li><div><img src="graphics/emojis/cloud.png"> :<span class="name">cloud</span>:</div></li>
-      <li><div><img src="graphics/emojis/snowflake.png"> :<span class="name">snowflake</span>:</div></li>
+      <li><div><img src="graphics/emojis/cloud.png"> :<span class="name" data-alternative-name="weather">cloud</span>:</div></li>
+      <li><div><img src="graphics/emojis/snowflake.png"> :<span class="name" data-alternative-name="weather">snowflake</span>:</div></li>
       <li><div><img src="graphics/emojis/snowman.png"> :<span class="name">snowman</span>:</div></li>
       <li><div><img src="graphics/emojis/zap.png"> :<span class="name">zap</span>:</div></li>
       <li><div><img src="graphics/emojis/cyclone.png"> :<span class="name" data-alternative-name="weather">cyclone</span>:</div></li>
@@ -380,7 +380,7 @@
       <li><div><img src="graphics/emojis/cat2.png"> :<span class="name" data-alternative-name="animal">cat2</span>:</div></li>
       <li><div><img src="graphics/emojis/poodle.png"> :<span class="name" data-alternative-name="animal">poodle</span>:</div></li>
       <li><div><img src="graphics/emojis/paw_prints.png"> :<span class="name" data-alternative-name="animal">paw_prints</span>:</div></li>
-      <li><div><img src="graphics/emojis/bouquet.png"> :<span class="name">bouquet</span>:</div></li>
+      <li><div><img src="graphics/emojis/bouquet.png"> :<span class="name" data-alternative-name="floral, flowers">bouquet</span>:</div></li>
       <li><div><img src="graphics/emojis/cherry_blossom.png"> :<span class="name" data-alternative-name="floral">cherry_blossom</span>:</div></li>
       <li><div><img src="graphics/emojis/tulip.png"> :<span class="name" data-alternative-name="floral">tulip</span>:</div></li>
       <li><div><img src="graphics/emojis/four_leaf_clover.png"> :<span class="name">four_leaf_clover</span>:</div></li>
