--- a/public/index.html
+++ b/public/index.html
@@ -123,33 +123,33 @@
       <li><div><img src="graphics/emojis/bowtie.png">:<span class="name" data-alternative-name="classy, bow, face, formal, fashion, suit, magic, circus">bowtie</span>:</div></li>
       <li><div><img src="graphics/emojis/smile.png">:<span class="name" data-alternative-name="happy, cheerful, face, joy, funny, haha, laugh, like">smile</span>:</div></li>
       <li><div><img src="graphics/emojis/simple_smile.png">:<span class="name" data-alternative-name="smile, guy, happy, cheerful, smiling">simple_smile</span>:</div></li>
-      <li><div><img src="graphics/emojis/laughing.png">:<span class="name" data-alternative-name="lol, funny, happy, joy, satisfied, haha, face, glad">laughing</span>:</div></li>
-      <li><div><img src="graphics/emojis/blush.png">:<span class="name" data-alternative-name="face, smile, happy, flushed, crush, embarrassed, shy, joy">blush</span>:</div></li>
+      <li><div><img src="graphics/emojis/laughing.png">:<span class="name" data-alternative-name="lol, funny, happy, joy, satisfied, haha, face, glad, giggle, chuckle">laughing</span>:</div></li>
+      <li><div><img src="graphics/emojis/blush.png">:<span class="name" data-alternative-name="face, smile, happy, flushed, crush, embarrassed, shy, joy, cute">blush</span>:</div></li>
       <li><div><img src="graphics/emojis/smiley.png">:<span class="name" data-alternative-name="funny, face, happy, joy, haha">smiley</span>:</div></li>
-      <li><div><img src="graphics/emojis/relaxed.png">:<span class="name" data-alternative-name="face, blush, massage, happiness">relaxed</span>:</div></li>
+      <li><div><img src="graphics/emojis/relaxed.png">:<span class="name" data-alternative-name="face, blush, massage, happiness, cool">relaxed</span>:</div></li>
       <li><div><img src="graphics/emojis/smirk.png">:<span class="name" data-alternative-name="face, smile, mean, prank, smug, sarcasm">smirk</span>:</div></li>
       <li><div><img src="graphics/emojis/heart_eyes.png">:<span class="name" data-alternative-name="heart, love, face, like, affection, valentines, infatuation, crush">heart_eyes</span>:</div></li>
-      <li><div><img src="graphics/emojis/kissing_heart.png">:<span class="name" data-alternative-name="heart, kiss, face, love, like, affection, valentines, infatuation">kissing_heart</span>:</div></li>
+      <li><div><img src="graphics/emojis/kissing_heart.png">:<span class="name" data-alternative-name="heart, kiss, face, love, like, affection, valentines, infatuation, smooch">kissing_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_closed_eyes.png">:<span class="name" data-alternative-name="face, love, like, affection, valentines, infatuation">kissing_closed_eyes</span>:</div></li>
-      <li><div><img src="graphics/emojis/flushed.png">:<span class="name" data-alternative-name="flustered, embarassed, face, blush, shy, flattered">flushed</span>:</div></li>
-      <li><div><img src="graphics/emojis/relieved.png">:<span class="name" data-alternative-name="face, relaxed, phew, massage, happiness">relieved</span>:</div></li>
+      <li><div><img src="graphics/emojis/flushed.png">:<span class="name" data-alternative-name="flustered, embarassed, face, blush, shy, flattered, coy">flushed</span>:</div></li>
+      <li><div><img src="graphics/emojis/relieved.png">:<span class="name" data-alternative-name="face, relaxed, phew, massage, happiness, cool">relieved</span>:</div></li>
       <li><div><img src="graphics/emojis/satisfied.png">:<span class="name" data-alternative-name="contented","pleased">satisfied</span>:</div></li>
       <li><div><img src="graphics/emojis/grin.png">:<span class="name" data-alternative-name="happy, smile, face, joy">grin</span>:</div></li>
       <li><div><img src="graphics/emojis/wink.png">:<span class="name" data-alternative-name="flirt, face, happy, mischievous, secret">wink</span>:</div></li>
-      <li><div><img src="graphics/emojis/stuck_out_tongue_winking_eye.png">:<span class="name" data-alternative-name="face, prank, childish, playful, mischievous, smile">stuck_out_tongue_winking_eye</span>:</div></li>
+      <li><div><img src="graphics/emojis/stuck_out_tongue_winking_eye.png">:<span class="name" data-alternative-name="face, prank, childish, playful, mischievous, smile, flirt">stuck_out_tongue_winking_eye</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_closed_eyes.png">:<span class="name" data-alternative-name="face, prank, playful, mischievous, smile">stuck_out_tongue_closed_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/grinning.png">:<span class="name" data-alternative-name="smiling, face, smile, happy, joy">grinning</span>:</div></li>
-      <li><div><img src="graphics/emojis/kissing.png">:<span class="name" data-alternative-name="love, like, face, 3, valentines, infatuation">kissing</span>:</div></li>
-      <li><div><img src="graphics/emojis/kissing_smiling_eyes.png">:<span class="name" data-alternative-name="smooch, face, affection, valentines, infatuation">kissing_smiling_eyes</span>:</div></li>
+      <li><div><img src="graphics/emojis/kissing.png">:<span class="name" data-alternative-name="love, like, face, 3, valentines, infatuation, flirt">kissing</span>:</div></li>
+      <li><div><img src="graphics/emojis/kissing_smiling_eyes.png">:<span class="name" data-alternative-name="smooch, face, affection, valentines, infatuation, flirt">kissing_smiling_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue.png">:<span class="name" data-alternative-name="face, prank, childish, playful, mischievous, smile">stuck_out_tongue</span>:</div></li>
       <li><div><img src="graphics/emojis/sleeping.png">:<span class="name" data-alternative-name="asleep, face, tired, sleepy, night, zzz">sleeping</span>:</div></li>
       <li><div><img src="graphics/emojis/worried.png">:<span class="name" data-alternative-name="frustrated, scared, face, concern, nervous">worried</span>:</div></li>
-      <li><div><img src="graphics/emojis/frowning.png">:<span class="name" data-alternative-name="face, aw, what">frowning</span>:</div></li>
-      <li><div><img src="graphics/emojis/anguished.png">:<span class="name" data-alternative-name="face, stunned, nervous">anguished</span>:</div></li>
+      <li><div><img src="graphics/emojis/frowning.png">:<span class="name" data-alternative-name="face, aw, what, sad">frowning</span>:</div></li>
+      <li><div><img src="graphics/emojis/anguished.png">:<span class="name" data-alternative-name="face, stunned, nervous, hurt, tired">anguished</span>:</div></li>
       <li><div><img src="graphics/emojis/open_mouth.png">:<span class="name" data-alternative-name="face, surprise, impressed, wow">open_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/grimacing.png">:<span class="name" data-alternative-name="face, grimace, teeth">grimacing</span>:</div></li>
       <li><div><img src="graphics/emojis/confused.png">:<span class="name" data-alternative-name="baffled, puzzled, face, indifference, huh, weird, hmmm">confused</span>:</div></li>
-      <li><div><img src="graphics/emojis/hushed.png">:<span class="name" data-alternative-name="face, woo, shh,conceal,hide">hushed</span>:</div></li>
+      <li><div><img src="graphics/emojis/hushed.png">:<span class="name" data-alternative-name="face, woo, shh, conceal, hide">hushed</span>:</div></li>
       <li><div><img src="graphics/emojis/expressionless.png">:<span class="name" data-alternative-name="deadpan, face, indifferent, -_-, meh">expressionless</span>:</div></li>
       <li><div><img src="graphics/emojis/unamused.png">:<span class="name" data-alternative-name="sarcasm, indifference, bored, straight face, serious">unamused</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_smile.png">:<span class="name" data-alternative-name="happy, relief, face, hot, laugh">sweat_smile</span>:</div></li>
