--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,7 @@
       <li><div><img src="graphics/emojis/-1.png">:<span class="name" data-alternative-name="thumbsdown, no, dislike, hand">-1</span>:</div></li>
       <li><div><img src="graphics/emojis/thumbsdown.png">:<span class="name" data-alternative-name="dislike">thumbsdown</span>:</div></li>
       <li><div><img src="graphics/emojis/ok_hand.png">:<span class="name" data-alternative-name="fingers, limbs, perfect">ok_hand</span>:</div></li>
-      <li><div><img src="graphics/emojis/punch.png">:<span class="name" data-alternative-name="pound">punch</span>:</div></li>
+      <li><div><img src="graphics/emojis/punch.png">:<span class="name" data-alternative-name="pound, fist">punch</span>:</div></li>
       <li><div><img src="graphics/emojis/facepunch.png">:<span class="name" data-alternative-name="angry, violence, fist, hit, attack, hand">facepunch</span>:</div></li>
       <li><div><img src="graphics/emojis/fist.png">:<span class="name" data-alternative-name="fingers, hand, grasp">fist</span>:</div></li>
       <li><div><img src="graphics/emojis/v.png">:<span class="name" data-alternative-name="peace, deuces, fingers, ohyeah, hand, victory, two">v</span>:</div></li>
